// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CardFooter correctly 1`] = `
<div
  className="card__footer"
>
  Vestibulum mollis elit nec leo venenatis, nec elementum nunc.
</div>
`;

exports[`renders CardFooter correctly with extra styles 1`] = `
<div
  className="card__footer"
  style={
    Object {
      "color": "white",
    }
  }
>
  Vestibulum mollis elit nec leo venenatis, nec elementum nunc.
</div>
`;
